# roviolib

./: CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  doxygen.conf  rovio_cc_lib.cc  rovio_cc_lib.h  rovio_example.cpp  testharness.cc
contrib/: README.txt  network.cc  network.h  spare.cc
firmware/: README.md
firmware/src_changes/: LibIPCamera.c  Version.c  changelog.txt  wlan0.c  wlan0.h
